--- a/DaisyMudLanding.Client/Components/Libs/SearchButton.razor
+++ b/DaisyMudLanding.Client/Components/Libs/SearchButton.razor
@@ -1,4 +1,4 @@
-@rendermode @(new InteractiveAutoRenderMode(false))
+@rendermode InteractiveAuto
 
 <button class="tooltip tooltip-bottom" data-tip="Search" @onclick="showSearchDialog">
     <LiSearch/>
